feat: Util: Toast
Für Monatsvergleich einen Util Toast gemacht

--- a/budget-planer/src/main/resources/css/style.css
+++ b/budget-planer/src/main/resources/css/style.css
@@ -18,4 +18,10 @@
     -fx-font-weight: bold;
 }
 
+.chart {
+    -fx-background-color: #f9f9f9;
+}
+.chart-plot-background {
+    -fx-background-color: white;
+}
 
